source/less/site/layout.less
.wrapper {
    position: fixed;
    z-index: 10;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    text-shadow: 0 1px 1px rgba(0,0,0,.4);
    color: #fff;
    text-rendering: optimizeLegibility;
    text-align: center;
    font-family: "proxima-nova", Helvetica, sans-serif;

}
.wrapper:before {
    content: '';
    display: inline-block;
    height: 100%;
    margin-right: -0.25em;
}
.wrapper:after {
    content: '';
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
}
.wrapper-inner {
    position: relative;
    display: inline-block;
    z-index: 2;
    margin-top: 5%;
}

#background-wrapper {
    top:0;
    left:0;
    width:100%;
    height:100%;
    overflow:hidden;
    position:absolute;
    z-index: 2;
    background: #1a1a1a url('../img/sparkler.jpg') center center fixed;
    background-repeat: no-repeat;
    background-size: cover;

}
#background {
    top:50%;
    left:50%;
    z-index:1;
    width:3000px;
    height:3000px;
    position:absolute;

    svg {
        margin:-50% 0 0 -50%;
        display:block;
    }

}

.header {
    text-align: center;
    .title {
        font-size: 100px;
        line-height: .95;
        font-weight: 700;
        letter-spacing: 0.03em;
        margin-bottom: 0;
    }
}

.blurb {
    text-align: center;
    margin-left: auto;
    margin-right: auto;
    text-transform: uppercase;
}

